<resources>
    <string name="Android_Server_Conexion">Android_Server_Conexion</string>
    <string name="disconnect">Desconectar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Pantalla de Login</string>
    <string name="second_fragment_label">Pantalla de Registro</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="registrarse">Registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_mismatch">Las contraseñas no coinciden</string>
    <string name="password_empty">Debes de introducir una cotnraseña</string>
    <string name="ip_mismatch">Introduzca una IP correcta</string>
    <string name="login_incorrect">Login incorrecto</string>
    <string name="ip">ip</string>
    <string name="user_exists">Este usuario ya existe</string>
    <string name="conexion_fail">Fallo en la conexion</string>
    <string name="empty_tb">Debes rellenar todos los campos</string>
    <string name="connecting">Conectando…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_servicios">"Bienvenido "</string>
    <string name="mandar_imagenes">Mandar imagenes</string>
    <string name="salir">Salir</string>

</resources>